--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "keywords": [
     "oracle",
@@ -21,8 +22,13 @@
   "author": "Luiz Felipe Zarco <felipezarco@hotmail.com> (https://gitlab.com/felipezarco)",
   "license": "MIT",
   "dependencies": {
+    "@types/jest": "^26.0.0",
     "repository": "git@github.com:felipezarco/oracle-object.git",
+    "ts-jest": "^26.1.0",
     "tsc": "^1.20150623.0",
     "typescript": "^3.9.2"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1"
   }
 }
