--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oracle-object",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Turns oracledb execute result into javascript objects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -27,11 +27,11 @@
     "url": "git://github.com/felipezarco/oracle-object.git"
   },
   "devDependencies": {
-    "tsc": "^1.20150623.0",
-    "typescript": "^3.9.2",
-    "ts-jest": "^26.1.0",
     "@types/jest": "^26.0.0",
     "coveralls": "^3.1.0",
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
+    "tsc": "^1.20150623.0",
+    "typescript": "^3.9.2"
   }
 }
